--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 	"support": {
 		"issues": "http://redmine.innovotel.com/projects/yii2-helpers",
 		"forum": "http://redmine.innovotel.com/projects/yii2-helpers/boards",
-		"wiki": "http://redmine.innovotel.com/projects/yii2-helpers/wiki",
+		"wiki": "http://redmine.innovotel.com/projects/yii2-helpers/wiki"
 	},
 	"authors": [
 		{
